Introduce interfaces to decouple Matcher logic
Introduce DeductionEngine and OptimizationEngine interface to decouple
the Matcher logic from the Drools and OptaPlanner implementations.
Refactored the class initialization to avoid reconstructing session
objects that can potentially be reused across multiple matching
processes.