@@ -11,81 +11,79 @@ import org.optaplanner.core.config.localsearch.LocalSearchPhaseConfig;
 import org.optaplanner.core.config.phase.PhaseConfig;
 import org.optaplanner.core.config.solver.EnvironmentMode;
 import org.optaplanner.core.config.solver.SolverConfig;
-import org.optaplanner.core.impl.score.director.drools.DroolsScoreDirector;
 import org.optaplanner.core.impl.score.director.drools.DroolsScoreDirectorFactory;
 import org.optaplanner.core.impl.solver.DefaultSolver;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.Collection;
-import java.util.stream.Collectors;
 
 /**
  * Facade on the OptaPlanner solver.
  *
  * Fills a Solution object.
  */
-public class OptaPlanner {
+public class OptaPlanner implements OptimizationEngine {
 
     /** Logger instance. */
     private static final Logger LOGGER = LogManager.getLogger(OptaPlanner.class);
 
-    /** The result. */
-    private final Assignment result;
+    /** The configured OptaPlanner solver reused across optimization calls. */
+    private final Solver<Assignment> solver;
 
     /**
-     * Instantiates an OptaPlanner instance with the specified unsolved problem.
+     * Instantiates an OptaPlanner optimizer.
      *
-     * @param unsolved the unsolved problem
      * @param testing true if running as a unit test, false otherwise
      */
-    public OptaPlanner(Assignment unsolved, boolean testing) {
+    public OptaPlanner(boolean testing) {
+        this.solver = createSolver(testing);
+    }
+
+    @Override
+    public Assignment optimize(Assignment unsolved) {
         // short circuit the planning in case there's nothing to optimize
         if (unsolved.getMatches().isEmpty()) {
-            result = unsolved;
-            return;
+            return unsolved;
         }
-
-        // init solver
-        Solver<Assignment> solver = initSolver(testing);
 
         // solve problem
         long start = System.currentTimeMillis();
         solver.solve(unsolved);
 
         LOGGER.info("Optimization phase took {}ms", System.currentTimeMillis() - start);
-        result = solver.getBestSolution();
-        LOGGER.info("{} matches confirmed", result.getMatches().stream().filter(m -> m.isConfirmed()).count());
+        Assignment solution = solver.getBestSolution();
+        LOGGER.info("{} matches confirmed", solution.getMatches().stream().filter(m -> m.isConfirmed()).count());
 
         if (LOGGER.isDebugEnabled()) {
             // Log confirmed matches
-            result.getMatches().stream()
+            solution.getMatches().stream()
                 .filter(m -> m.isConfirmed())
                 .forEach(m -> LOGGER.debug("{}", m));
 
             // Show the Penalty facts generated in Scores.drl using DroolsScoreDirector and re-calculating the score
             // of the best solution, because facts generated dynamically are not available outside of this object
-            logOneTwoPenalties(solver, result);
+            logOneTwoPenalties(solver, solution);
         }
+
+        return solution;
     }
 
     private static void logOneTwoPenalties(Solver<Assignment> solver, Assignment result) {
         // Make sure the runtime instances are of the correct types
-        if (!(solver instanceof DefaultSolver) || !(solver.getScoreDirectorFactory() instanceof DroolsScoreDirectorFactory)) {
+        if (!(solver instanceof DefaultSolver<Assignment> defaultSolver) ||
+                !(solver.getScoreDirectorFactory() instanceof DroolsScoreDirectorFactory<Assignment> directorFactory)) {
             return;
         }
 
-        DefaultSolver<Assignment> defaultSolver = (DefaultSolver<Assignment>) solver;
-        DroolsScoreDirectorFactory<Assignment> directorFactory = (DroolsScoreDirectorFactory<Assignment>) defaultSolver.getScoreDirectorFactory();
-        EnvironmentMode environmentMode = defaultSolver.getEnvironmentMode();
+        var environmentMode = defaultSolver.getEnvironmentMode();
 
         // Build a new score director and re-evaluate the score
-        try (DroolsScoreDirector<Assignment> director = directorFactory.buildScoreDirector(true, environmentMode.isAsserted())) {
+        try (var director = directorFactory.buildScoreDirector(true, environmentMode.isAsserted())) {
             director.setWorkingSolution(director.cloneSolution(result));
             director.calculateScore();
 
-            Collection<OneTwoPenalty> penalties = CollectionUtils.typeStream(director.getKieSession().getObjects(), OneTwoPenalty.class)
-                .collect(Collectors.toList());
+            var penalties = CollectionUtils.typeStream(director.getKieSession().getObjects(), OneTwoPenalty.class)
+                .toList();
 
             LOGGER.debug("The best solution has {} penalties for 1-2 subscriptions.", penalties.size());
             penalties.forEach(penalty -> LOGGER.debug("{}", penalty));
@@ -103,7 +101,7 @@ public class OptaPlanner {
      * @return the solver
      * @param testing true if running as a unit test, false otherwise
      */
-    private Solver<Assignment> initSolver(boolean testing) {
+    private Solver<Assignment> createSolver(boolean testing) {
         try (InputStream stream = OptaPlanner.class.getResourceAsStream("solver-config.xml")) {
             if (stream == null) {
                 throw new IllegalStateException("Unable to locate planner configuration");
@@ -130,12 +128,4 @@ public class OptaPlanner {
         }
     }
 
-    /**
-     * Gets the result.
-     *
-     * @return the result
-     */
-    public Assignment getResult() {
-        return result;
-    }
 }
